[tool.poetry]
name = "biobeaker"
version = "0.0.2"
description = "Coming soon"
authors = [
    "Joseph Guhlin <joseph.guhlin@gmail.com>"
]
license = "TBD"

readme = "README.md"

homepage = "https://github.com/jguhlin/beaker"
repository = "https://github.com/jguhlin/beaker"
documentation = "https://github.com/jguhlin/beaker"

keywords = ["machine learning", "bioinformatics"]

classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Requirements
[tool.poetry.dependencies]
python = ">=3.7,<3.11"
tensorflow = ">=2.4.1"
numpy = ">=1.19.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
